feat: add lesson 5 notebook and facility location model

--- a/src/lesson4.ipynb
+++ b/src/lesson4.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "fab1ae7a",
    "metadata": {},
    "outputs": [],
@@ -73,9 +73,110 @@
     "\n",
     "# saves the model to an lp file and shows its contents\n",
     "def save(model, filename):\n",
-    "    model.write(filename) # saves the model to a file\n",
-    "    with open(filename, \"r\") as f: # reads and displays the file contents\n",
+    "    model.write(filename) \n",
+    "    with open(filename, \"r\") as f: \n",
     "        print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1db2a85d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\Problem name: \n",
+      "\n",
+      "Minimize\n",
+      "OBJROW: 41 x_0_0 + 27 x_0_1 + 28 x_0_2 + 24 x_0_3 + 40 x_1_0 + 29 x_1_1 + 23 x_1_3 + 37 x_2_0 + 30 x_2_1 + 27 x_2_2\n",
+      " + 21 x_2_3\n",
+      "Subject To\n",
+      "constr(0):  x_0_0 + x_0_1 + x_0_2 + x_0_3 <= 75\n",
+      "constr(1):  x_1_0 + x_1_1 + x_1_2 + x_1_3 <= 75\n",
+      "constr(2):  x_2_0 + x_2_1 + x_2_2 + x_2_3 <= 45\n",
+      "constr(3):  x_0_0 + x_1_0 + x_2_0 >= 20\n",
+      "constr(4):  x_0_1 + x_1_1 + x_2_1 >= 30\n",
+      "constr(5):  x_0_2 + x_1_2 + x_2_2 >= 30\n",
+      "constr(6):  x_0_3 + x_1_3 + x_2_3 >= 40\n",
+      "constr(7):  x_1_2 = 0\n",
+      "Bounds\n",
+      "Integers\n",
+      "x_0_0 x_0_1 x_0_2 x_0_3 x_1_0 x_1_1 x_1_2 x_1_3 x_2_0 x_2_1 \n",
+      "x_2_2 x_2_3 \n",
+      "End\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We want to minimize the production cost while meeting the demand\n",
+    "model = Model(sense=MINIMIZE, solver_name=CBC)\n",
+    "\n",
+    "capacities = [75, 75, 45]\n",
+    "demands = [20, 30, 30, 40]\n",
+    "costs = [[41, 27, 28, 24],\n",
+    "         [40, 29,  0, 23],\n",
+    "         [37, 30, 27, 21]]\n",
+    "\n",
+    "num_factories = 3\n",
+    "num_products = 4\n",
+    "\n",
+    "# x[i][j] := number of products from type j made in factory i\n",
+    "x = [[model.add_var(var_type=INTEGER,\n",
+    "                    name=f\"x_{i}_{j}\", lb=0.0) for j in range(num_products)]\n",
+    "     for i in range(num_factories)]\n",
+    "\n",
+    "# Objective function\n",
+    "model.objective = xsum(costs[i][j] * x[i][j]\n",
+    "                        for i in range(num_factories) for j in range(num_products))\n",
+    "\n",
+    "# Capacity constraint\n",
+    "for i in range(num_factories):\n",
+    "  model += xsum(x[i][j] for j in range(num_products)) <= capacities[i]\n",
+    "\n",
+    "# Demand constraint\n",
+    "for j in range(num_products):\n",
+    "  model += xsum(x[i][j] for i in range(num_factories)) >= demands[j]\n",
+    "\n",
+    "model += x[1][2] == 0\n",
+    "\n",
+    "save(model, \"../data/lesson4_1.lp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e9fa0b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status =  OptimizationStatus.OPTIMAL\n",
+      "Solution value  = 3260.00\n",
+      "\n",
+      "Solution:\n",
+      "x_0_0 = 0.00\n",
+      "x_0_1 = 30.00\n",
+      "x_0_2 = 30.00\n",
+      "x_0_3 = 0.00\n",
+      "x_1_0 = 0.00\n",
+      "x_1_1 = 0.00\n",
+      "x_1_2 = 0.00\n",
+      "x_1_3 = 15.00\n",
+      "x_2_0 = 20.00\n",
+      "x_2_1 = 0.00\n",
+      "x_2_2 = 0.00\n",
+      "x_2_3 = 25.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "solve(model)"
    ]
   },
   {
@@ -90,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "10440904",
    "metadata": {},
    "outputs": [
@@ -171,12 +272,12 @@
     "# Factory 2 cannot produce product 3\n",
     "model += x[1][2] == 0\n",
     "\n",
-    "save(model, \"../data/lesson4.lp\")"
+    "save(model, \"../data/lesson4_2.lp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "08714506",
    "metadata": {},
    "outputs": [
