--- a/src/lesson8.ipynb
+++ b/src/lesson8.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "8f8b1bac",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "145c43b0",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "b7c6b009",
    "metadata": {},
    "outputs": [
@@ -156,10 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2c1e1308",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status =  OptimizationStatus.OPTIMAL\n",
+      "Solution value  = 500350.0\n",
+      "\n",
+      "Solution:\n",
+      "x_0_1  =  12300.0\n",
+      "x_1_0  =  11200.0\n",
+      "x_1_1  =  4200.0\n",
+      "x_2_0  =  300.0\n",
+      "x_2_2  =  13000.0\n"
+     ]
+    }
+   ],
    "source": [
     "solve(model)"
    ]
